# resourcelib-bindings

./: .gitmodules  Cargo.toml
.github/workflows/: build.yml
glacier-codegen/: .gitignore  Cargo.toml  build.rs
glacier-codegen/src/: glacier_types.rs  lib.rs
resourcelib-ffi/: .gitignore  Cargo.toml  build.rs
resourcelib-ffi/examples/: hello_world.rs
resourcelib-ffi/src/: codegen.rs  lib.rs
resourcelib-ffi/tests/: resource_tests.rs
resourcelib-sys/: Cargo.toml  build-old.rs  build.rs  wrapper.h
