[package]
name = "glacier-codegen"
version = "0.1.0"
edition = "2021"

#[profile.dev]
#opt-level = 1

[build-dependencies]
regex = "1.11.1"
heck = "0.5.0"
[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
typetag = "0.2.20"
serde_json = "1.0.140"
serde-big-array = "0.5.1"
downcast-rs = "2.0.1"
regex = "1.11.1"
heck = "0.5.0"
quote = "1.0.40"
syn = "2.0.100"
proc-macro2 = "1.0.94"
