[package]
authors = ["Dafitius"]
categories = ["api-bindings"]
description = "Unofficial Rust bindings for the ResourceLib library"
edition = "2021"
license = "GLPL"
name = "resourcelib-ffi"
readme = "README.md"
version = "1.0.0"
build = "build.rs"
links = "resourcelib"

[dependencies]
resourcelib-sys = { path = "../resourcelib-sys" }
thiserror = "2.0.3"
glacier-codegen = {path="../glacier-codegen", optional = true}
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true}

[features]
default = ["codegen"]
codegen = ["glacier-codegen", "serde", "serde_json"]