[package]
name = "resourcelib-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "resourcelib-sys"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"]}

[build-dependencies]
cc = "1.2.1"
cmake = { git = "https://github.com/Chiichen/cmake-rs.git", branch = "feat-force-no-default-flags" }
#bindgen = { version = "0.70.1"}
bindgen = {git = "https://github.com/rust-lang/rust-bindgen", branch = "main"}
num_cpus = "1.16.0"